Closed Bug 1350821 Opened 7 years ago Closed 7 years ago

[webvtt] subtitle disappear with the ui control.

Categories

(Core :: Audio/Video: Playback, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: bechen, Assigned: bechen)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Latest nightly,
str:
1. play a video with webvtt subtitle
2. press mouse right key -> hide ui control
subtitle disappeared.
The show/hide control seems trigger nsVideoFrame::CreateAnonymousContent again.
I'm not sure but if so, I guess after video frame re-constructed, webvtt lost the reference to new ".caption-div" therefore we could not update the caption anymore.
perhaps we can dispatch and carry new reference to webvtt.jsm via event in nsVideoFrame::CreateAnonymousContent?
(In reply to Ray Lin[:ralin] from comment #3)
> perhaps we can dispatch and carry new reference to webvtt.jsm via event in
> nsVideoFrame::CreateAnonymousContent?

Right, I'm going to write a function like nsVideoFrame::HasVideoElement() to notify the mediaElement to render the subtitle.
Assignee: nobody → bechen
Comment on attachment 8851931 [details]
Bug 1350821 - Notify the mediaElement to render subtitle when the mCaption was created or re-created.

https://reviewboard.mozilla.org/r/124186/#review126994

Would be nice if we could add a test for this. I don't know how to do user-interaction tests. Marionette, I think?
Attachment #8851931 - Flags: review?(giles) → review+
Blocks: 1351539
Priority: -- → P1
Keywords: checkin-needed
Pushed by ihsiao@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4d31fef17298
Notify the mediaElement to render subtitle when the mCaption was created or re-created. r=rillian
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/4d31fef17298
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Benjamin, 
Does this affect 54 as well? If yes, we may need to request a uplift.
Flags: needinfo?(bechen)
(In reply to Blake Wu [:bwu][:blakewu] from comment #9)
> Benjamin, 
> Does this affect 54 as well? If yes, we may need to request a uplift.

Not sure, but I guess the bug also exist in FF54.
I don't think it should uplift to 54 because it is just a UI bug. Real user barely hit this one,
and even the bug occurs, after press play button, subtitle works again.
Flags: needinfo?(bechen)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: