Bug 1350821 - Notify the mediaElement to render subtitle when the mCaption was created or re-created. r=rillian

MozReview-Commit-ID: 3RM7u8jumT9